| Bug #18386 | SELECT with ORDER BY causes a crash | ||
|---|---|---|---|
| Submitted: | 21 Mar 2006 12:27 | Modified: | 31 Mar 2006 9:50 |
| Reporter: | Horst Hunger | ||
| Status: | Closed | ||
| Category: | Server: Views | Severity: | S2 (Serious) |
| Version: | 5.0, 5.1 | OS: | Linux (Linux 9.3) |
| Assigned to: | Igor Babaev | Target Version: | |
[21 Mar 2006 12:27]
Horst Hunger
[28 Mar 2006 4:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4219
[28 Mar 2006 19:43]
Igor Babaev
ChangeSet 1.2098 06/03/27 18:28:55 igor@rurik.mysql.com +3 -0 Fixed bug #18386. An invalid assertion in Item_direct_view_ref::eq caused an assertion abort in the debug version. Fix will appear in 5.0.20. It was merged into 5.1
[31 Mar 2006 9:50]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.0.20 and 5.1.8 changelogs. Closed.
