Fixed bug #18386. An invalid assertion in Item_direct_view_ref::eq caused an assertion abort in the debug version.